--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html ng-app="coo">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <title>预约洗车</title>
     <link rel="stylesheet" href="public/lib/semantic/dist/semantic.css">
     <link rel="stylesheet" href="public/css/basic.css">
-    <link rel="stylesheet" href="public/css/yy.css">
-</head>
-<body>
+    <link rel="stylesheet" href="public/css/index.css">
 
-    <div ng-view></div>
+
 
     <script src="public/lib/jquery/dist/jquery.js"></script>
     <script src="public/lib/semantic/dist/semantic.js"></script>
@@ -21,7 +19,12 @@
 
 
     <script src="app.js"></script>
-    <script src="modules/reservation/index.js"></script>
+    <script src="modules/index/index.js"></script>
+
+</head>
+<body>
+
+    <div ng-view></div>
 
 </body>
 </html>
