--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
     <script src="app.js"></script>
     <script src="modules/index/index.js"></script>
 
+    <script src="components/modal/index.js"></script>
+
 </head>
 <body>
 
-    <div ng-view></div>
+    <div ng-view class="main"></div>
 
 </body>
 </html>
