--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="public/lib/semantic/dist/semantic.css">
     <link rel="stylesheet" href="public/css/basic.css">
     <link rel="stylesheet" href="public/css/index.css">
+    <link rel="stylesheet" href="public/css/default-setting.css">
 
 
 
@@ -19,9 +20,11 @@
 
 
     <script src="app.js"></script>
-    <script src="modules/index/index.js"></script>
-
+    <script src="services/global.js"></script>
     <script src="components/modal/index.js"></script>
+    <script src="modules/index/index.js"></script>
+    <script src="modules/default-setting/index.js"></script>
+
 
 </head>
 <body>
