--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
     <script src="public/lib/angular-resource/angular-resource.js"></script>
 
 
-    <script src="app.js"></script>
-    <script src="services/global.js"></script>
+    <script src="app.global.js"></script>
+
     <script src="components/modal/index.js"></script>
+
     <script src="modules/index/index.js"></script>
     <script src="modules/default-setting/index.js"></script>
+
+    <script src="app.js"></script>
 
 
 </head>
